--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "parth",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "expresss": "^0.0.0",
     "nodemon": "^3.0.1",
